added font to tailwind config

--- a/src/Components/LandingPage/LandingPageStyles.css
+++ b/src/Components/LandingPage/LandingPageStyles.css
@@ -15,5 +15,14 @@
 }
 
 .custom-class:hover::after {
-  width: 40px;
+  width: 38px;
+}
+
+.LandingContainer {
+  background-image: url("../../assets/background.png");
+  background-size: cover;
+  background-color: #0e0419;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh;
 }
